# blaz4r

./: .gitignore  1_make_gnirs_itc_inputs.py  2_run_gnirs_itc_batch.py  3_plot_gnirs_itc_snr.py  README.md  blaz4r_table1_targets.csv  gnirs_itc_inputs.csv  itc-inputs.csv  main.py  pyproject.toml
tests/: test_gnirs_itc_logic.py
